# wordle

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md  compile.sh  test.sh
data/: words_five.txt  words_two.txt
include/: Wordle.h
src/: Tester.cpp  Wordle.cpp  main.cpp
